<resources>
    <string name="app_name">慢聊天</string>

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="server_url">http://119.23.35.35/home/selectProfileDetail?id=6</string>

    <!--主界面-->
    <string name="main_action_settings">设置</string>
    <string name="main_action_exit">退出</string>
    <string name="main_action_search">搜索</string>
    <string name="main_action_friend_hall">好友大厅</string>
    <string name="title_activity_main">慢聊天</string>
    <string name="main_activity_chat_manage">慢聊天</string>
    <string name="main_activity_friend_manage">关注</string>
    <string name="main_activity_personal_info">个人</string>


    <!--聊天管理-->
    <string name="chat_manage_send">发送</string>
    <string name="chat_manage_friend_info">好友信息</string>
    <string name="chat_manage_chat_search">聊天信息搜索</string>


    <!--好友管理-->
    <string name="friend_manage_title">关注的好友</string>

    <!--登录-->
    <string name="login_tittle" translatable="false">登录窗口</string>
    <string name="login_user_name" translatable="false">账号：</string>
    <string name="login_user_name_hint" translatable="false">请输入邮箱</string>
    <string name="login_password" translatable="false">密码：</string>
    <string name="login_login" translatable="false">登录</string>
    <string name="login_exit" translatable="false">退出</string>
    <string name="login_success" translatable="false">登录成功！</string>
    <string name="login_fail" translatable="false">登录失败！</string>
    <string name="login_null" translatable="false">登录失败！\t\n用户名和密码不可为空！</string>
    <string name="login_dialog_tip" translatable="false">提示</string>
    <string name="login_dialog_sure" translatable="false">确定</string>
    <string name="login_dialog_cancel" translatable="false">取消</string>
    <string name="login_dialog_exit" translatable="false">你确定要离开吗？</string>

    <string name="login_toolbar_setting" translatable="false">设置</string>
    <string name="login_toolbar_register" translatable="false">注册</string>
    <string name="login_toolbar_find_back_password" translatable="false">找回密码</string>

    <!--注册页面-->
    <string name="register_user_name" translatable="false">用户名:</string>
    <string name="register_user_name_hint" translatable="false">请输入用户名</string>

    <string name="register_account" translatable="false">账号:</string>
    <string name="register_account_hint" translatable="false">邮箱</string>

    <string name="register_password" translatable="false">密码:</string>
    <string name="register_password_hint" translatable="false">请输入密码</string>

    <string name="register_confirm_password" translatable="false">确认密码:</string>
    <string name="register_confirm_password_hint" translatable="false">请重新输入密码</string>

    <string name="register_btn" translatable="false">注册</string>


    <!--交友大厅-->
    <string name="title_activity_make_friend_hall">MakeFriendHall</string>
    <string name="make_friend_large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_chat_main">ChatMainActivity</string>
    <string name="title_activity_chat_manage_search">ChatManageSearch</string>

    <string name="title_activity_friend_info">FriendInfoActivity</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>


    <!--个人信息-->
    <string name="personal_info_user_name_title">用户名:</string>
    <string name="personal_info_user_account_title">账号:</string>
    <string name="personal_info_user_integral_title">经验值:</string>

    <string name="personal_info_detail_user_name_textView" translatable="false">用户名：</string>
    <string name="personal_info_detail_user_email_textView" translatable="false">账号：</string>
    <string name="personal_info_detail_user__textView" translatable="false">经验值：</string>
    <string name="personal_info_detail_user_signature_textView" translatable="false">个性签名：</string>

    <!--详细个人信息-->
    <string name="personal_info_detail_user_name_title">用户名:</string>
    <string name="personal_info_detail_user_email_title">邮箱:</string>
    <string name="personal_info_detail_user_integral_title">经验值:</string>
    <string name="personal_info_detail_user_signature_title">个性签名:</string>



</resources>
