<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dell.slowchat.MainInterface.MainActivity">
    <item
        android:id="@+id/main_action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/main_action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_action_friend_hall"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/main_action_friend_hall"
        app:showAsAction="always" />
    <item
        android:id="@+id/main_action_settings"
        android:orderInCategory="100"
        android:title="@string/main_action_settings" />
    <item
        android:id="@+id/main_action_exit"
        android:orderInCategory="100"
        android:title="@string/main_action_exit" />
</menu>
