<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dell.slowchat.Login.MainLogin">

    <item
        android:id="@+id/login_action_settings"
        android:orderInCategory="100"
        android:title="@string/login_toolbar_setting"
        app:showAsAction="never" />

    <item
        android:id="@+id/login_action_register"
        android:orderInCategory="100"
        android:title="@string/login_toolbar_register"
        app:showAsAction="never" />

    <item
        android:id="@+id/login_action_find_back_password"
        android:orderInCategory="100"
        android:title="@string/login_toolbar_find_back_password"
        app:showAsAction="never"/>
</menu>
